--- a/serverless.yml
+++ b/serverless.yml
@@ -17,18 +17,18 @@ provider:
 
 functions:
   celo-mainnet:
-    handler: chains/celo-mainnet.celoTrxnStatus
+    handler: src/chains/celo-mainnet.celoTrxnStatus
     timeout: 60
     reservedConcurrency: 1
     events:
       - schedule: rate(2 minutes)
 
   goerli-testnet:
-    handler: chains/goerli-testnet.goerliTrxnStatus
-    timeout: 60
+    handler: src/chains/goerli-testnet.goerliTrxnStatus
+    timeout: 120
     reservedConcurrency: 1
     events:
-      - schedule: rate(5 minutes)
+      - schedule: rate(2 minutes)
 
   polygon-mainnet:
     handler: chains/polygon-mainnet.polygonTrxnStatus
@@ -45,5 +45,6 @@ functions:
       - schedule: rate(2 minutes)
 
 plugins:
+  - serverless-plugin-typescript
   - serverless-offline
   - serverless-dotenv-plugin
