fix: execution timestamp for cancelled state

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,33 +16,33 @@ provider:
   logRetentionInDays: 14
 
 functions:
-  # celo-mainnet:
-  #   handler: src/chains/celo-mainnet.celoTrxnStatus
-  #   timeout: 60
-  #   reservedConcurrency: 1
-  #   events:
-  #     - schedule: rate(5 minutes)
+  celo-mainnet:
+    handler: src/chains/celo-mainnet.celoTrxnStatus
+    timeout: 60
+    reservedConcurrency: 1
+    events:
+      - schedule: rate(5 minutes)
 
   goerli-testnet:
     handler: src/chains/goerli-testnet.goerliTrxnStatus
     timeout: 120
     reservedConcurrency: 1
     events:
-      - schedule: rate(1 minute)
+      - schedule: rate(10 minutes)
 
-  # polygon-mainnet:
-  #   handler: src/chains/polygon-mainnet.polygonTrxnStatus
-  #   timeout: 60
-  #   reservedConcurrency: 1
-  #   events:
-  #     - schedule: rate(5 minutes)
+  polygon-mainnet:
+    handler: src/chains/polygon-mainnet.polygonTrxnStatus
+    timeout: 60
+    reservedConcurrency: 1
+    events:
+      - schedule: rate(5 minutes)
 
-  # optimism-mainnet:
-  #   handler: src/chains/optimism-mainnet.optimismTrxnStatus
-  #   timeout: 60
-  #   reservedConcurrency: 1
-  #   events:
-  #     - schedule: rate(3 minutes)
+  optimism-mainnet:
+    handler: src/chains/optimism-mainnet.optimismTrxnStatus
+    timeout: 60
+    reservedConcurrency: 1
+    events:
+      - schedule: rate(3 minutes)
 
 plugins:
   - serverless-plugin-typescript
